--- a/projects/discovering-disease-outbreaks/jupyter-notebooks/s1_parse_headlines.ipynb
+++ b/projects/discovering-disease-outbreaks/jupyter-notebooks/s1_parse_headlines.ipynb
@@ -943,52 +943,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>original_name</th>\n",
-       "      <th>geonameid</th>\n",
-       "      <th>population</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>countrycode</th>\n",
-       "      <th>simple_name</th>\n",
-       "      <th>tidy_len</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [original_name, geonameid, population, latitude, longitude, countrycode, simple_name, tidy_len]\n",
-       "Index: []"
+       "[]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,25 +969,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1049,7 @@
        "4  Zika cases in Vietnam's Ho Chi Minh City surge                               Ho Chi Minh City      NaN   "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,11 +1069,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final.to_csv(\"s1_parsed_headlines.csv\",index=False)"
+    "df_final.to_csv(\"../data-files/s1_parsed_headlines.csv\",index=False)"
    ]
   },
   {
