--- a/projects/discovering-disease-outbreaks/jupyter-notebooks/s2_headlines_add_lat_long.ipynb
+++ b/projects/discovering-disease-outbreaks/jupyter-notebooks/s2_headlines_add_lat_long.ipynb
@@ -67,9 +67,10 @@
     "debug = 0\n",
     "\n",
     "# Headlines with cities are in this file:\n",
-    "fname1= r\"C:\\Users\\jshaf\\GitHub\\data-science-portfolio\\coursework\"\n",
-    "fname2 = r\"\\manning-data-science-bookcamp\\jupyter_notebooks\\s1_parsed_headlines.csv\"\n",
-    "fname = fname1 + fname2\n",
+    "#fname1= r\"C:\\Users\\jshaf\\GitHub\\data-science-portfolio\\projects\"\n",
+    "#fname2 = r\"\\discovering-disease-outbreaks\\jupyter-notebooks\\s1_parsed_headlines.csv\"\n",
+    "#fname = fname1 + fname2\n",
+    "fname = \"../data-files/s1_parsed_headlines.csv\"\n",
     "\n",
     "# First step when using geonamescache\n",
     "gc = geonamescache.GeonamesCache()  \n",
@@ -460,17 +461,17 @@
     {
      "data": {
       "text/plain": [
-       "['Spanish Flu Spreading through Madrid',\n",
-       " 'Spanish Flu Outbreak in Lisbon',\n",
-       " 'Thailand-Zika Virus in Bangkok',\n",
+       "['Thailand-Zika Virus in Bangkok',\n",
        " 'New Zika Case in Kota Kinabalu, Malaysia',\n",
-       " 'Student sick in Campinas, Brazil',\n",
-       " 'Zika surfaces in Klang, Malaysia',\n",
-       " 'Mystery Virus Spreads in Recife, Brazil',\n",
        " 'Zika outbreak in Piracicaba, Brazil',\n",
+       " 'Student sick in Campinas, Brazil',\n",
        " 'Zika reaches Johor Bahru, Malaysia',\n",
-       " \"Zika cases in Vietnam's Ho Chi Minh City surge\",\n",
-       " 'Zika Patient in Seminole, Florida']"
+       " 'Zika surfaces in Klang, Malaysia',\n",
+       " 'Spanish Flu Spreading through Madrid',\n",
+       " 'Mystery Virus Spreads in Recife, Brazil',\n",
+       " 'Zika Patient in Seminole, Florida',\n",
+       " 'Spanish Flu Outbreak in Lisbon',\n",
+       " \"Zika cases in Vietnam's Ho Chi Minh City surge\"]"
       ]
      },
      "execution_count": 10,
@@ -492,7 +493,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Drop list is: [526, 522, 615, 613, 619, 612, 617, 618, 614, 616, 350]\n"
+      "Drop list is: [615, 613, 618, 619, 614, 612, 526, 617, 350, 522, 616]\n"
      ]
     }
    ],
@@ -1285,7 +1286,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2cf5defdd88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1b42acee648>"
       ]
      },
      "execution_count": 28,
@@ -1534,7 +1535,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('s2_headlines_lat_long_cc.csv',index=False)"
+    "df.to_csv('../data-files/s2_headlines_lat_long_cc.csv',index=False)"
    ]
   },
   {
